pop up notification work done. Need real implementation

--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -51,11 +51,16 @@
   </header>
   <main> <a href="about.html">About</a></main>
   <footer></footer> -->
-  <header>
+  <header class="HomePage_header">
     <h1>Home Genie</h1>
-    <a href="#" id="ShowMenu">
-      <i class="fas fa-bars"></i>
-    </a>
+    <div class="Menu_BellIconContainer">
+      <a href="#" id="ShowNotificationPopUp">
+        <i class="fas fa-bell"></i>
+      </a>
+      <a href="#" id="ShowMenu">
+        <i class="fas fa-bars"></i>
+      </a>
+    </div>
   </header>
 
   <nav class="mb-menu" id="showHideMenu">
@@ -70,6 +75,26 @@
       <li><a href="#"><strong>Logout?</strong></a></li>
     </ul>
   </nav>
+
+  <div class="NotificationPopUpContainer">
+    <div class="NotificationPopUp">
+      <div class="Notification_id1">
+        <h3>Listing Name</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+        <div>
+          <button>View Listing</button>
+        </div>
+      </div>
+      <div class="Notification_id1">
+        <h3>Listing Name</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+        <div>
+          <button>View Listing</button>
+        </div>
+      </div>
+    </div>
+    <div class="triangle"></div>
+  </div>
 
   <!-- <div class="form">
     <ul class="top-area">
