Added image to splash screen. Did some changes in the pop up notification

--- a/html_Files/SplashScreen.html
+++ b/html_Files/SplashScreen.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <meta http-equiv="refresh" content="3, url=/html_Files/index.html">
     <title>Home Genie</title>
     <link rel="manifest" href="../app.webmanifest">
@@ -20,11 +21,13 @@
 </head>
 
 <body>
-    <div class="progress_bar_container">
-        <div class="progressbar">
+    <div class="ProgressBarWrapper">
+        <img src="../img/Splash_Screen.png" class="SplashImage" alt="splash screen">
+        <div class="progress_bar_container">
+            <div class="progressbar">
+            </div>
         </div>
     </div>
 </body>
-<script src="../js/splash_screen.js"></script>
 
 </html>
