removed the scss and kept one css file only

--- a/html_Files/BrowseListings.html
+++ b/html_Files/BrowseListings.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Genie - Listings</title>
+
+    
+    <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
+    <link rel="manifest" href="../app.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
+        integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
+</head>
+
 <body>
-    <header></header>
+    <header>
+        <h1>Listings</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
+
 </html>
