--- a/html_Files/Login.html
+++ b/html_Files/Login.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Genie - Login</title>
+    <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
+    <link rel="manifest" href="../app.webmanifest">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
+        integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
+    <!-- <header class="HomePage_header">
+        <h1>Home Genie</h1>
+        <div class="Menu_BellIconContainer">
+            <a href="#" id="ShowNotificationPopUp">
+                <i class="fas fa-bell"></i>
+            </a>
+            <a href="#" id="ShowMenu">
+                <i class="fas fa-bars"></i>
+            </a>
+        </div>
+    </header> -->
+
+    <!-- <nav class="mb-menu" id="showHideMenu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Browse Listings</a></li>
+            <li><a href="#"> Create New Listing</a></li>
+            <li><a href="#">View Your Listing</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#"><strong>Logout?</strong></a></li>
+        </ul>
+    </nav> -->
+    <main>
+        <div class="login_wrapper">
+            <form action="">
+                <label for="email">First Name</label>
+                <input type="Email" id="email" name="email" placeholder="Email">
+                <label for="password">Last Name</label>
+                <input type="password" id="password" name="password" placeholder="Password">
+                <input type="submit" id="LoginBtn" value="Login">
+            </form>
+        </div>
+    </main>
     <footer></footer>
 </body>
+<script src="../js/script.js" defer></script>
+
 </html>
