--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -66,13 +66,13 @@
   <nav class="mb-menu" id="showHideMenu">
     <ul>
       <!-- Add Links to the Pages when created -->
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Browse Listings</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="BrowseListings.html">Browse Listings</a></li>
       <li><a href="#"> Create New Listing</a></li>
       <li><a href="#">View Your Listing</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Profile</a></li>
-      <li><a href="#"><strong>Logout?</strong></a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
+      <li><a href="UpdateProfile.html">Profile</a></li>
+      <li><a href="Login.html"><strong>Logout?</strong></a></li>
     </ul>
   </nav>
 
