did changes of getting back normalize.css

--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <h1>Sign Up</h1>
+    </header>
     <main></main>
     <footer></footer>
 </body>
