--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -16,7 +16,6 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
-
   <script>
     // does the browser support service workers?
     if ('serviceWorker' in navigator) {
@@ -66,7 +65,7 @@
   <nav class="mb-menu" id="showHideMenu">
     <ul>
       <!-- Add Links to the Pages when created -->
-      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="BrowseListings.html">Browse Listings</a></li>
       <li><a href="#"> Create New Listing</a></li>
       <li><a href="#">View Your Listing</a></li>
