--- a/html_Files/Signup.html
+++ b/html_Files/Signup.html
@@ -21,11 +21,77 @@
 </head>
 
 <body>
-    <header>
-        <h1>Sign Up</h1>
-    </header>
-    <main></main>
+    <main>
+        <div class="SignUp-parent">
+            <div class="SignUp-wrapper">
+                <header>
+                    <h1>Sign Up</h1>
+                </header>
+                <main>
+                    <form>
+                        <div class="First_Name">
+                            <label for="SignUp_fName"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="SignUp_fName" name="SignUp_fName" placeholder="First Name"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="Last_Name">
+                            <label for="SignUp_lName"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="SignUp_lName" name="SignUp_lName" placeholder="Last Name"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="Phone_Number">
+                            <label for="SignUp_phoneNumber"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="SignUp_phoneNumber" name="SignUp_phoneNumber" placeholder="Phone Number"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="Email">
+                            <label for="SignUp_email"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="email" id="SignUp_email" name="SignUp_email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="Password">
+                            <label for="SignUp_password"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="password" id="SignUp_password" name="SignUp_password"
+                                    placeholder="Password" required>
+                            </div>
+                        </div>
+                        <div class="Confirm_Password">
+                            <label for="SignUp_cPassword"></label>
+                            <div class="icon_input_wrapper">
+                                <i class="fas fa-user"></i>
+                                <input type="text" id="SignUp_cPassword" name="SignUp_cPassword"
+                                    placeholder="Confirm Password" required>
+                            </div>
+                        </div>
+                        <div class="SignUp-buttons">
+                            <button type="submit" id="SignUpBtn">Sign Up</button><br>
+                            <span class="LoginLink">
+                                <p>Already user </p><a href="Login.html"> Login</a>
+                            </span>
+                        </div>
+                        <div class="errorContainr">
+                            <p>**Password does not match</p>
+                        </div>
+                    </form>
+                </main>
+            </div>
+        </div>
+    </main>
     <footer></footer>
+    <script src="../js/signup.js" defer></script>
 </body>
 
 </html>
