--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -60,8 +60,37 @@
         <i class="fas fa-bars"></i>
       </a>
     </div>
+    <div class="dk-menu">
+      <a href="#" id="dk-ShowNotificationPopUp">
+        <i class="fas fa-bell"></i>
+      </a>
+      <ul>
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="BrowseListings.html">Browse</a>
+        </li>
+        <li>
+          <a href="">Create</a>
+        </li>
+        <li>
+          <a href="">Your Listings</a>
+        </li>
+        <li>
+          <a href="AboutUs.html">About Us</a>
+        </li>
+        <li>
+          <a href="UpdateProfile.html">Profile</a>
+        </li>
+        <li>
+          <a href="Login.html">Logout</a>
+        </li>
+      </ul>
+    </div>
   </header>
 
+  <div class="mb-nav_wrapper"></div>
   <nav class="mb-menu" id="showHideMenu">
     <ul>
       <!-- Add Links to the Pages when created -->
@@ -75,103 +104,27 @@
     </ul>
   </nav>
 
-  <div class="NotificationPopUpContainer">
-    <div class="NotificationPopUp">
-      <div class="Notification_id1">
-        <h3>Listing Name</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-        <div>
-          <button>View Listing</button>
+  <div class="Notification_wrapper">
+    <div class="NotificationPopUpContainer">
+      <div class="NotificationPopUp">
+        <div class="Notification_id1">
+          <h3>Listing Name</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+          <div>
+            <button>View Listing</button>
+          </div>
+        </div>
+        <div class="Notification_id1">
+          <h3>Listing Name</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+          <div>
+            <button>View Listing</button>
+          </div>
         </div>
       </div>
-      <div class="Notification_id1">
-        <h3>Listing Name</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
-        <div>
-          <button>View Listing</button>
-        </div>
-      </div>
+      <div class="triangle"></div>
     </div>
-    <div class="triangle"></div>
   </div>
-
-  <!-- <div class="form">
-    <ul class="top-area">
-      <li class="tab active"><a href="#signup">Sign Up</a></li>
-      <li class="tab"><a href="#login">Log In</a></li>
-    </ul>
-
-    <div class="tab-content">
-      <div id="signup">
-        <h1>Sign Up for Free</h1>
-
-        <form id="form" action="" method="post">
-
-          <div class="top-row">
-            <div class="label-field">
-              <label>
-                First Name<span class="req">*</span>
-              </label>
-              <input type="text" required autocomplete="off" id="firstname" />
-            </div>
-
-            <div class="label-field">
-              <label>
-                Last Name<span class="req">*</span>
-              </label>
-              <input type="text" required autocomplete="off" id="lastname" />
-            </div>
-          </div>
-
-          <div class="label-field">
-            <label>
-              Email Address<span class="req">*</span>
-            </label>
-            <input type="email" required autocomplete="off" id="email" />
-          </div>
-
-          <div class="label-field">
-            <label>
-              Set A Password<span class="req">*</span>
-            </label>
-            <input type="password" required autocomplete="off" id="password" />
-          </div>
-
-          <button type="button" class="button button-block" onclick="UserAction()">Get Started</button>
-
-        </form>
-
-      </div>
-
-      <div id="login">
-        <h1>Welcome Back!</h1>
-
-        <form action="/" method="post">
-
-          <div class="label-field">
-            <label>
-              Email Address<span class="req">*</span>
-            </label>
-            <input type="email" required autocomplete="off" id="email" />
-          </div>
-
-          <div class="label-field">
-            <label>
-              Password<span class="req">*</span>
-            </label>
-            <input type="password" required autocomplete="off" id="password" />
-          </div>
-
-          <p class="forgot"><a href="#">Forgot Password?</a></p>
-
-          <button class="button button-block">Log In</button>
-
-        </form>
-
-      </div>
-
-    </div>
-  </div> -->
   <script src="../js/script.js" defer></script>
 </body>
 
