Forget Password UI Implementation

--- a/html_Files/ForgetPassword.html
+++ b/html_Files/ForgetPassword.html
@@ -20,9 +20,69 @@
 </head>
 
 <body>
+    <main>
+        <div class="fg-Password-parent">
+            <div class="fg-Password-wrapper">
+                <h1>Forget Password</h1>
+                <form>
+                    <div class="fg-Password-email">
+                        <label for="fg-Password-email"></label>
+                        <div class="icon_input_wrapper">
+                            <i class="fas fa-user"></i>
+                            <input type="text" id="fg-Password-email" name="fg-Password-email" placeholder="Email"
+                                required>
+                        </div>
+                    </div>
+                    <div class="OTP-wrapper">
+                        <h2>Enter OTP</h2>
+                        <div class="input_wrapper">
+                            <input type="text" maxlength="1" onkeypress="return inputNumberOnly(event)" id="field_1">
+                            <span>-</span>
+                            <input type="text" maxlength="1" onkeypress="return inputNumberOnly(event)" id="field_2">
+                            <span>-</span>
+                            <input type="text" maxlength="1" onkeypress="return inputNumberOnly(event)" id="field_3">
+                            <span>-</span>
+                            <input type="text" maxlength="1" onkeypress="return inputNumberOnly(event)" id="field_4">
+                        </div>
+                        <div>
+                            <button id="VerifyOTP">Verify</button>
+                        </div>
+                    </div>
+                    <div class="fg-Password-buttons">
+                        <button type="submit" class="SendOTPBtn" id="fg-PasswordBtn">Send OTP</button><br>
+                    </div>
+                </form>
+            </div>
+            <div class="generate_passwordDiv">
+                <h1>Generate</h1>
+                <form>
+                    <div class="fg-oldPassword">
+                        <label for="fg-oldPassword"></label>
+                        <div class="icon_input_wrapper">
+                            <i class="fas fa-user"></i>
+                            <input type="password" id="fg-oldPassword" name="fg-oldPassword" placeholder="Old Password"
+                                required>
+                        </div>
+                    </div>
+                    <div class="fg-NewPassword">
+                        <label for="fg-NewPassword"></label>
+                        <div class="icon_input_wrapper">
+                            <i class="fas fa-user"></i>
+                            <input type="text" id="fg-NewPassword" name="fg-NewPassword" placeholder="New Password"
+                                required>
+                        </div>
+                    </div>
+                    <div class="fg-GeneratePassword-buttons">
+                        <button type="submit" class="ConfirmBtn" id="fg-ConfirmBtn">Confirm</button><br>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </main>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
 
+    <script src="../js/forget_password.js" defer></script>
 </body>
-
-<script src="../js/script.js" defer></script>
 
 </html>
