--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -90,7 +90,7 @@
     </div>
   </header>
 
-  <div class="mb-nav_wrapper"></div>
+  <!-- <div class="mb-nav_wrapper"></div> -->
   <nav class="mb-menu" id="showHideMenu">
     <ul>
       <!-- Add Links to the Pages when created -->
@@ -103,7 +103,7 @@
       <li><a href="Login.html"><strong>Logout?</strong></a></li>
     </ul>
   </nav>
-
+ 
   <div class="Notification_wrapper">
     <div class="NotificationPopUpContainer">
       <div class="NotificationPopUp">
