--- a/html_Files/ForgetPassword.html
+++ b/html_Files/ForgetPassword.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Genie - About Us</title>
-
+    <title>Home Genie - Login</title>
     <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
     <link rel="manifest" href="../app.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
@@ -19,14 +18,11 @@
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-</head>
 
 <body>
-    <header>
-        <h1>About us</h1>
-    </header>
-    <main></main>
-    <footer></footer>
+
 </body>
+
+<script src="../js/script.js" defer></script>
 
 </html>
