--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -16,7 +16,6 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/styles.css">
-
   <script>
     // does the browser support service workers?
     if ('serviceWorker' in navigator) {
@@ -51,25 +50,50 @@
   </header>
   <main> <a href="about.html">About</a></main>
   <footer></footer> -->
-  <header>
+  <header class="HomePage_header">
     <h1>Home Genie</h1>
-    <a href="#" id="ShowMenu">
-      <i class="fas fa-bars"></i>
-    </a>
+    <div class="Menu_BellIconContainer">
+      <a href="#" id="ShowNotificationPopUp">
+        <i class="fas fa-bell"></i>
+      </a>
+      <a href="#" id="ShowMenu">
+        <i class="fas fa-bars"></i>
+      </a>
+    </div>
   </header>
 
   <nav class="mb-menu" id="showHideMenu">
     <ul>
       <!-- Add Links to the Pages when created -->
       <li><a href="#">Home</a></li>
-      <li><a href="#">Browse Listings</a></li>
+      <li><a href="BrowseListings.html">Browse Listings</a></li>
       <li><a href="#"> Create New Listing</a></li>
       <li><a href="#">View Your Listing</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Profile</a></li>
-      <li><a href="#"><strong>Logout?</strong></a></li>
+      <li><a href="AboutUs.html">About Us</a></li>
+      <li><a href="UpdateProfile.html">Profile</a></li>
+      <li><a href="Login.html"><strong>Logout?</strong></a></li>
     </ul>
   </nav>
+
+  <div class="NotificationPopUpContainer">
+    <div class="NotificationPopUp">
+      <div class="Notification_id1">
+        <h3>Listing Name</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+        <div>
+          <button>View Listing</button>
+        </div>
+      </div>
+      <div class="Notification_id1">
+        <h3>Listing Name</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore, asperiores?</p>
+        <div>
+          <button>View Listing</button>
+        </div>
+      </div>
+    </div>
+    <div class="triangle"></div>
+  </div>
 
   <!-- <div class="form">
     <ul class="top-area">
