About us page completed

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
         integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/6b1d565c72.js" crossorigin="anonymous"></script>
 
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
@@ -22,11 +23,75 @@
 </head>
 
 <body>
-    <header>
-        <h1>About us</h1>
-    </header>
-    <main></main>
-    <footer></footer>
+    <div class="about-wrapper">
+        <header>
+            <nav>
+                <ul class="about-menu">
+                    <li><a href="#"><i class="fa-solid fa-house-chimney"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="about-content1">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa? Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
+                <img src="https://picsum.photos/500/500?random=11">
+            </div>
+            <h2>Our Vision</h2>
+            <div class="about-content2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
+            </div>
+            <h2>Why Choose Us?</h2>
+            <div class="about-choose-item1">
+                <span><i class="fa-solid fa-star"></i></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
+            </div>
+            <div class="about-choose-item2">
+                <span><i class="fa-solid fa-gear"></i></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
+            </div>
+            <div class="about-choose-item3">
+                <span><i class="fa-solid fa-earth-europe"></i></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
+            </div>
+            <div class="about-choose-item4">
+                <span><i class="fa-solid fa-location-dot"></i></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
+            </div>
+            <h2>Our Team</h2>
+            <div class="about-team">
+                <div class="about-team-image1">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Project Manager</p>
+                </div>
+                <div class="about-team-image2">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Designer 1</p>
+                </div>
+                <div class="about-team-image3">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Design Lead</p>
+                </div>
+                <div class="about-team-image4">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Designer 2</p>
+                </div>
+                <div class="about-team-image5">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Developer 1</p>
+                </div>
+                <div class="about-team-image6">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Developer Lead</p>
+                </div>
+                <div class="about-team-image7">
+                    <img src="https://picsum.photos/200/200?random=11" alt="">
+                    <p>Developer 2</p>
+                </div>
+            </div>
+        </main>
+        <footer></footer>
+    </div>
 </body>
 
 </html>
