--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -25,38 +25,58 @@
 <body>
     <div class="about-wrapper">
         <header>
-            <nav>
+            <nav class="about-mobile-nav"> 
                 <ul class="about-menu">
                     <li><a href="#"><i class="fa-solid fa-house-chimney"></i></a></li>
                     <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
                 </ul>
             </nav>
+            <div class="about-desktop-menu">
+                <div class="about-header-logo">
+                    <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+                </div>
+                <nav class="about-desktop-nav">
+                    <ul>
+                        <li><a href="#">Browse Listing</a></li>
+                        <li><a href="#">Create New Listing</a></li>
+                        <li><a href="#">View Your Listing</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Profile</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
             <div class="about-content1">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa? Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
                 <img src="https://picsum.photos/500/500?random=11">
             </div>
-            <h2>Our Vision</h2>
-            <div class="about-content2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
-            </div>
-            <h2>Why Choose Us?</h2>
-            <div class="about-choose-item1">
-                <span><i class="fa-solid fa-star"></i></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
-            </div>
-            <div class="about-choose-item2">
-                <span><i class="fa-solid fa-gear"></i></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
-            </div>
-            <div class="about-choose-item3">
-                <span><i class="fa-solid fa-earth-europe"></i></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
-            </div>
-            <div class="about-choose-item4">
-                <span><i class="fa-solid fa-location-dot"></i></span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, ducimus.</p>
+            <div class="desktop-grid">
+                <div class="about-vision">
+                    <h2>Our Vision</h2>
+                    <div class="about-content2">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia amet optio commodi earum consequatur velit eum atque, hic repellat. Autem quo natus itaque doloribus qui, facere deserunt numquam neque assumenda?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias sit enim ex nulla laborum, fugiat laudantium consequuntur veritatis blanditiis. Debitis reprehenderit ducimus eius tempore voluptatibus, sed a voluptas corrupti sequi.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nihil eius ut, omnis excepturi quisquam tenetur dicta perspiciatis similique dolore illo magnam tempore soluta consequuntur, ratione nulla nisi officiis. Sunt.</p>
+                    </div>
+                </div>
+                    <div class="about-choose">
+                        <h2>Why Choose Us?</h2>
+                        <div class="about-choose-item1">
+                            <span><i class="fa-solid fa-star"></i></span>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </div>
+                        <div class="about-choose-item2">
+                            <span><i class="fa-solid fa-gear"></i></span>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </div>
+                        <div class="about-choose-item3">
+                            <span><i class="fa-solid fa-earth-europe"></i></span>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </div>
+                        <div class="about-choose-item4">
+                            <span><i class="fa-solid fa-location-dot"></i></span>
+                            <p>Lorem ipsum dolor sit amet consectetur</p>
+                        </div>
+                    </div>
             </div>
             <h2>Our Team</h2>
             <div class="about-team">
@@ -90,7 +110,38 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <footer class="about-footer">
+            <div class="about-logo">
+                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+            </div>
+            <div class="about-footer-nav1">
+                <nav>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Create New Listing</a></li>
+                        <li><a href="#">View Your Listing</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav2">
+                <nav>
+                    <ul>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav3">
+                <nav>
+                    <ul>
+                        <li><a href="#">Let's Get Connected !!</a></li>
+                        <li><a href="#">+1 1234567890</a></li>
+                        <li><a href="#">abc@homegenie.ca</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </div>
 </body>
 
