--- a/html_Files/SplashScreen.html
+++ b/html_Files/SplashScreen.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta http-equiv="refresh" content="3, url=/home_genie_frontend/html_Files/Login.html">
+    <meta http-equiv="refresh" content="3, url=/html_Files/Login.html">
     <title>Home Genie</title>
     <link rel="manifest" href="../app.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
