About us page finalized

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -23,29 +23,8 @@
 </head>
 
 <body>
-    <div class="about-wrapper">
-        <header>
-            <nav class="about-mobile-nav"> 
-                <ul class="about-menu">
-                    <li><a href="#"><i class="fa-solid fa-house-chimney"></i></a></li>
-                    <li><a href="#"><i class="fa-solid fa-bars"></i></a></li>
-                </ul>
-            </nav>
-            <div class="about-desktop-menu">
-                <div class="about-header-logo">
-                    <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
-                </div>
-                <nav class="about-desktop-nav">
-                    <ul>
-                        <li><a href="#">Browse Listing</a></li>
-                        <li><a href="#">Create New Listing</a></li>
-                        <li><a href="#">View Your Listing</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Profile</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+    <div class="about-wrapper">        
+        
         <main>
             <div class="about-content1">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates amet quaerat dicta culpa? Expedita illo excepturi fugiat facere repellendus. Omnis.</p>
@@ -110,39 +89,10 @@
                 </div>
             </div>
         </main>
-        <footer class="about-footer">
-            <div class="about-logo">
-                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
-            </div>
-            <div class="about-footer-nav1">
-                <nav>
-                    <ul>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Create New Listing</a></li>
-                        <li><a href="#">View Your Listing</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav2">
-                <nav>
-                    <ul>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav3">
-                <nav>
-                    <ul>
-                        <li><a href="#">Let's Get Connected !!</a></li>
-                        <li><a href="#">+1 1234567890</a></li>
-                        <li><a href="#">abc@homegenie.ca</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </footer>
     </div>
+
+    <script src="../js/script.js" defer></script>
+
 </body>
 
 </html>
