Update Profile, Search integration, And coding done in the listing login script and update profile page

--- a/html_Files/Search.html
+++ b/html_Files/Search.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Genie - Listings</title>
-
-
+    <meta charset="utf-8">
+    <title>Home Genie</title>
     <meta name="description" content="A Bidding platform for the people to bid on the home services of other people">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="../app.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css"
         integrity="sha512-3PN6gfRNZEX4YFyz+sIyTF6pGlQiryJu9NlGhu9LrLMQ7eDjNgudQoFDK3WSNAayeIKc6B8WXXpo4a7HqxjKwg=="
@@ -19,10 +16,42 @@
 
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
-</head>
+    <script>
+        // does the browser support service workers?
+        if ('serviceWorker' in navigator) {
+            // fires when the service worker is ready
+            navigator.serviceWorker.ready.then(reg => {
+                // we have an active service worker working for us
+                console.log(`Service Worker ready (Scope: ${reg.scope})`);
+                // do something interesting, if you want...
+
+            });
+            // then register our service worker
+            navigator.serviceWorker.register('.././sw.js', { scope: '/' })
+                .then(function (reg) {
+                    // display a success message
+                    console.log(`Service Worker Registration (Scope: ${reg.scope})`);
+                })
+                .catch(function (error) {
+                    // display an error message
+                    console.log(`Service Worker Error (${error})`);
+                });
+        } else {
+            // happens when the app isn't served over a TLS connection (HTTPS)
+            console.warn('Service Worker not available');
+        }
+    </script>
 </head>
 
 <body>
+
+    <!-- <header>
+    <h1>Home Genie</h1>
+  </header>
+  <main> <a href="about.html">About</a></main>
+  <footer></footer> -->
+
+    <!-- For the Developer Copy Start from here  line 148-->
     <header class="HomePage_header">
         <h1>Home Genie</h1>
         <div class="Menu_BellIconContainer">
@@ -116,10 +145,14 @@
             <div class="triangle"></div>
         </div>
     </div>
+    <!-- Till here -->
 
-    <main></main>
-    <footer></footer>
+    <main>
+
+    </main>
+
     <script src="../js/script.js" defer></script>
+    <script src="../js/Search.js"></script>
 </body>
 
 </html>
