Added search functionality

--- a/html_Files/Search.html
+++ b/html_Files/Search.html
@@ -147,8 +147,42 @@
     </div>
     <!-- Till here -->
 
-    <main>
-
+    <main id="SearchMainContainer">
+        <div class="Search_Listing_Container">
+            <h2 id="main_Title"></h2>
+            <!-- <div class="card">
+                <img src="https://picsum.photos/500/250?random=11" alt="random image">
+                <h3>Listing Title</h3>
+                <p>Posted By <span>Lorem Ipsum</span></p>
+                <div class="browseBtn_Container">
+                    <a href="#" class="browseBtn">View Listing</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/500/250?random=13" alt="random image">
+                <h3>Listing Title</h3>
+                <p>Posted By <span>Lorem Ipsum</span></p>
+                <div class="browseBtn_Container">
+                    <a href="#" class="browseBtn">View Listing</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/500/250?random=12" alt="random image">
+                <h3>Listing Title</h3>
+                <p>Posted By <span>Lorem Ipsum</span></p>
+                <div class="browseBtn_Container">
+                    <a href="#" class="browseBtn">View Listing</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/500/250?random=14" alt="random image">
+                <h3>Listing Title</h3>
+                <p>Posted By <span>Lorem Ipsum</span></p>
+                <div class="browseBtn_Container">
+                    <a href="#" class="browseBtn">View Listing</a>
+                </div>
+            </div> -->
+        </div>
     </main>
 
     <script src="../js/script.js" defer></script>
